# snake

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  build_test  conanfile.txt  package.cmake  update_package
cmake/: Conan.cmake
include/: board.hpp  board_arithmetic.hpp  board_point_ops.hpp  bounded_point.hpp  direction.hpp  event.hpp  event_handler.hpp  functional.hpp  game.hpp  game_loop.hpp  game_play.hpp  game_properties.hpp  init.hpp  init_game_data.hpp  input.hpp  input_handler.hpp  math.hpp  matrix_algorithm.hpp  mod_int.hpp  point.hpp  point_arithmetic.hpp  point_dir_ops.hpp  property.hpp  random.hpp  random_fruit_generator.hpp  random_point.hpp  run.hpp  running_state_ops.hpp  snake.hpp  snake_arithmetic.hpp  state.hpp  state_arithmetic.hpp  state_ops.hpp
src/: CMakeLists.txt  event_input_ops.cpp  event_input_ops.hpp  main.cpp
src/snk/: board_point_ops.cpp  event_handler.cpp  event_input_ops.cpp  event_input_ops.hpp  input_handler.cpp  point_dir_ops.cpp  random_fruit_generator.cpp  running_state_ops.cpp  snake.cpp  state_ops.cpp
test/: CMakeLists.txt  board_point_ops_test.cpp  doctest.hpp  mod_int_test.cpp  point_arithmetic_test.cpp  point_dir_ops_test.cpp  snake_test.cpp  state_machine_test.cpp  state_ops_test.cpp  test_include.hpp
tests/: CMakeLists.txt  board_arithmetic_test.cpp  board_test.cpp  doctest.hpp  matrix_algorithm_test.cpp  mock_value_generator.hpp  mod_int_test.cpp  point_arithmetic_test.cpp  snake_arithmetic_test.cpp  snake_maths_test.cpp  snake_test.cpp  state_machine_ignore.cpp
(+11 files in other folders)
